--- a/modules/_ioc_react_withdependencies_.html
+++ b/modules/_ioc_react_withdependencies_.html
@@ -73,7 +73,7 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_ioc_react_withdependencies_.html#withdependencies" class="tsd-kind-icon">with<wbr>Dependencies</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter"><a href="_ioc_react_withdependencies_.html#withdependencies" class="tsd-kind-icon">with<wbr>Dependencies</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,23 +81,29 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
 					<a name="withdependencies" class="tsd-anchor"></a>
 					<h3>with<wbr>Dependencies</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">with<wbr>Dependencies<span class="tsd-signature-symbol">(</span>inject<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">(Anonymous function)</span></li>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+						<li class="tsd-signature tsd-kind-icon">with<wbr>Dependencies&lt;T&gt;<span class="tsd-signature-symbol">(</span>inject<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">(Anonymous function)</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/ioc-react/withDependencies.tsx#L4">ioc-react/withDependencies.tsx:4</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/ioc-react/withDependencies.tsx#L5">ioc-react/withDependencies.tsx:5</a></li>
 								</ul>
 							</aside>
+							<h4 class="tsd-type-parameters-title">Type parameters</h4>
+							<ul class="tsd-type-parameters">
+								<li>
+									<h4>T</h4>
+								</li>
+							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>inject: <span class="tsd-signature-type">any</span></h5>
+									<h5>inject: <span class="tsd-signature-type">T</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">(Anonymous function)</span></h4>
@@ -123,6 +129,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_ioc_react_useinstance_.html">"ioc-<wbr>react/use<wbr>Instance"</a>
 					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="_ioc_react_withdependencies_.html">"ioc-<wbr>react/with<wbr>Dependencies"</a>
@@ -161,6 +170,9 @@
 						<a href="_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_state_react_usesubscription_.html">"state-<wbr>react/use<wbr>Subscription"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_state_arraystate_.html">"state/<wbr>Array<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -182,7 +194,7 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="_ioc_react_withdependencies_.html#withdependencies" class="tsd-kind-icon">with<wbr>Dependencies</a>
 					</li>
 				</ul>
@@ -202,6 +214,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -250,7 +263,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
